src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__vec__tests__concat_idents! (parse it_can_work_on_individual_backtracks).snap
---
source: src/type_atoms/adt/vec.rs
expression: "crate::parse::<Rep<P<(Ident, P<Option<Punct>>)>>>(q.clone())"
---
Ok(
    Rep(
        [
            P(
                (
                    Ident(
                        hello,
                    ),
                    P(
                        Some(
                            Punct {
                                char: '<',
                                spacing: Alone,
                            },
                        ),
                    ),
                ),
            ),
            P(
                (
                    Ident(
                        world,
                    ),
                    P(
                        None,
                    ),
                ),
            ),
            P(
                (
                    Ident(
                        hi,
                    ),
                    P(
                        None,
                    ),
                ),
            ),
        ],
    ),
)
