src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__vec__tests__concat_idents! (parse it_matches_basic_iteration).snap
---
source: src/type_atoms/adt/vec.rs
expression: "crate::parse::<Rep<Ident>>(q.clone())"
---
Ok(
    Rep(
        [
            Ident(
                hello,
            ),
            Ident(
                world,
            ),
            Ident(
                hi,
            ),
        ],
    ),
)
