src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__vec__tests__concat_idents! (parse it_matches_comments).snap
---
source: src/type_atoms/adt/vec.rs
expression: "crate::parse::<Rep<TokenTree>>(q.clone())"
---
Ok(
    Rep(
        [],
    ),
)
