src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__vec__tests__concat_idents! (parse it_matches_esoterics).snap
---
source: src/type_atoms/adt/vec.rs
expression: "crate::parse::<Rep<P<(Ident, P<Option<P<(Two, Ident)>>>, Two)>>>(q.clone())"
---
Ok(
    Rep(
        [
            P(
                (
                    Ident(
                        r1,
                    ),
                    P(
                        Some(
                            P(
                                (
                                    P(
                                        (
                                            FPunct(
                                                Span,
                                            ),
                                            FPunct(
                                                Span,
                                            ),
                                        ),
                                    ),
                                    Ident(
                                        r2,
                                    ),
                                ),
                            ),
                        ),
                    ),
                    P(
                        (
                            FPunct(
                                Span,
                            ),
                            FPunct(
                                Span,
                            ),
                        ),
                    ),
                ),
            ),
            P(
                (
                    Ident(
                        r3,
                    ),
                    P(
                        Some(
                            P(
                                (
                                    P(
                                        (
                                            FPunct(
                                                Span,
                                            ),
                                            FPunct(
                                                Span,
                                            ),
                                        ),
                                    ),
                                    Ident(
                                        r4,
                                    ),
                                ),
                            ),
                        ),
                    ),
                    P(
                        (
                            FPunct(
                                Span,
                            ),
                            FPunct(
                                Span,
                            ),
                        ),
                    ),
                ),
            ),
            P(
                (
                    Ident(
                        r5,
                    ),
                    P(
                        None,
                    ),
                    P(
                        (
                            FPunct(
                                Span,
                            ),
                            FPunct(
                                Span,
                            ),
                        ),
                    ),
                ),
            ),
        ],
    ),
)
