src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__vec__tests__concat_idents! (parse it_specifies_correct_backstep).snap
---
source: src/type_atoms/adt/vec.rs
expression: "crate::parse::<Rep<P<(Ident, Ident)>>>(q.clone())"
---
Ok(
    Rep(
        [
            P(
                (
                    Ident(
                        hello,
                    ),
                    Ident(
                        world,
                    ),
                ),
            ),
        ],
    ),
)
