src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__vec__tests__concat_idents! (peek it_can_work_on_individual_backtracks).snap
---
source: src/type_atoms/adt/vec.rs
expression: "crate::test_peek::<Rep<P<(Ident, P<Option<Punct>>)>>>(q.clone())"
---
Some(
    4,
)
