src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__vec__tests__concat_idents! (peek it_matches_comments).snap
---
source: src/type_atoms/adt/vec.rs
expression: "crate::test_peek::<Rep<TokenTree>>(q.clone())"
---
Some(
    0,
)
